objects/Component__c.object
<CustomObject>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Modified_Data__c</fullName>
        <label>Field Modified Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Component Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of instances that this component exists in.</description>
        <inlineHelpText>The number of instances that this component exists in.</inlineHelpText>
        <label>Instance Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Modified_Users__c</fullName>
        <description>Aggregates the users who last modified the component across all instances</description>
        <label>Last Modified Users</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Last_Modified_Date__c</fullName>
        <description>The most recent modification timestamp across all environments.</description>
        <label>Overall Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Child Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Deployment_Steps__c</fullName>
        <label>Post Deployment Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Deployment_Steps__c</fullName>
        <label>Pre Deployment Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Instances__c</fullName>
        <label>Source Instances</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Assignment Rule</fullName>
                </value>
                <value>
                    <fullName>Business Rule</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Custom Button or Link</fullName>
                </value>
                <value>
                    <fullName>Custom Object Tab</fullName>
                </value>
                <value>
                    <fullName>Custom Setting</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Email Template</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Field Set</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Home Page Component</fullName>
                </value>
                <value>
                    <fullName>Home Page Layout</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>List View</fullName>
                </value>
                <value>
                    <fullName>Lookup Filter</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Object Translation</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Password Policy</fullName>
                </value>
                <value>
                    <fullName>Permission Set</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Quick Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>source_users__c</fullName>
        <label>source users</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>users</valueSetName>
        </valueSet>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Component__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>Salesforce</fullName>
        <active>true</active>
        <description>Salesforce specific components.</description>
        <label>Salesforce</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Instance_Lookup_Required</fullName>
        <active>false</active>
        <description>Require the user to select an Instance record if the field modified data is empty</description>
        <errorConditionFormula>AND(
 ISBLANK(Field_Modified_Data__c),
 !ISPICKVAL(Type__c, &apos;Apex Unit Test&apos;),
 !ISPICKVAL(Type__c, &apos;Apex Class&apos;),
 !ISPICKVAL(Type__c, &apos;Apex Trigger&apos;))</errorConditionFormula>
        <errorDisplayField>Instance__c</errorDisplayField>
        <errorMessage>You must tie this component record to an Instance.</errorMessage>
    </validationRules>
</CustomObject>